fad/test/neg/missing-field.fad
// Should fail: record missing declared field
unpack fadeno. Int

/: {( .a = Int | .b = Int )}
x = { .a = 4 }

in x
